fix: Normalize image names for matching in model_comparison.ipynb
- Added 'image_stem' column to batch and ground truth dataframes to strip file extensions.
- Updated merge operations to use 'image_stem' instead of 'image_file' for consistent matching.
- Enhanced filtering and lookups in relevant cells to utilize the new 'image_stem' mapping.
- Improved debugging output to reflect changes in image matching logic.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -67,12 +67,12 @@
     "\n",
     "# base_data_path = '/home/jovyan/nfs_share/tod/LMM_POC'\n",
     "# base_data_path = '/home/jovyan/LMM_POC-oct6'\n",
-    "base_data_path = '/Users/tod/Desktop/_LMM_POC'\n",
+    "base_data_path = '/home/jovyan/_LMM_POC'\n",
     "\n",
     "CONFIG = {\n",
     "    # Path settings - Now supports both absolute and relative paths\n",
     "    'output_dir': f'{base_data_path}/output/csv',  # Can be relative or absolute path\n",
-    "    'ground_truth_path': f'{base_data_path}/evaluation_data/ground_truth.csv',  # Ground truth for field accuracy\n",
+    "    'ground_truth_path': f'{base_data_path}/evaluation_data/lmm_poc_gt_20251111.csv',  # Ground truth for field accuracy\n",
     "    \n",
     "    # UPDATED: File patterns matching new notebook naming conventions\n",
     "    # Current naming: llama_batch_results_*.csv, internvl3_batch_results_*.csv, etc.\n",
@@ -841,10 +841,24 @@
     "        if len(ground_truth_map) > 0:\n",
     "            sample_gt_names = list(ground_truth_map.keys())[:3]\n",
     "            rprint(f\"[dim]  DEBUG: Sample ground truth names: {sample_gt_names}[/dim]\")\n",
+    "\n",
+    "        # FIX: Normalize image names by stripping extensions for matching\n",
+    "        # Batch CSV has extensions (.jpeg, .png), ground truth does not\n",
+    "        batch_df['image_stem'] = batch_df[image_col].apply(lambda x: Path(x).stem)\n",
+    "\n",
+    "        # Create ground truth mapping with stems as keys\n",
+    "        ground_truth_by_stem = {}\n",
+    "        for gt_name, gt_data in ground_truth_map.items():\n",
+    "            stem = Path(str(gt_name)).stem  # Strip extension if present\n",
+    "            ground_truth_by_stem[stem] = gt_data\n",
+    "\n",
+    "        rprint(f\"[dim]  DEBUG: Created stem-based mapping for {len(ground_truth_by_stem)} ground truth entries[/dim]\")\n",
+    "\n",
+    "\n",
     "        \n",
     "        # FILTER: Only evaluate images that have ground truth\n",
     "        # FIX: Match using image_file column (consistent with ground truth)\n",
-    "        batch_df_filtered = batch_df[batch_df[image_col].isin(ground_truth_map.keys())]\n",
+    "        batch_df_filtered = batch_df[batch_df['image_stem'].isin(ground_truth_by_stem.keys())]\n",
     "        filtered_count = len(batch_df_filtered)\n",
     "        skipped_count = total_images - filtered_count\n",
     "        \n",
@@ -874,7 +888,9 @@
     "            image_identifier = row[image_col]\n",
     "            \n",
     "            # Get ground truth for this image (use image_identifier as key)\n",
-    "            gt_data = ground_truth_map.get(image_identifier)\n",
+    "            # Get ground truth using stem (without extension)\n",
+    "            image_stem = Path(str(image_identifier)).stem\n",
+    "            gt_data = ground_truth_by_stem.get(image_stem)\n",
     "            if not gt_data:\n",
     "                continue\n",
     "            \n",
@@ -2128,10 +2144,15 @@
     "    Returns:\n",
     "        tuple: (confusion_matrix, classification_report_dict)\n",
     "    \"\"\"\n",
-    "    # Merge to align predictions with ground truth\n",
+    "    # Normalize image names (strip extensions) for matching\n",
+    "    # Batch has extensions (.jpeg, .png), ground truth does not\n",
+    "    df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)\n",
+    "    ground_truth_df['image_stem'] = ground_truth_df['image_file'].apply(lambda x: Path(x).stem)\n",
+    "\n",
+    "    # Merge to align predictions with ground truth using stems\n",
     "    merged = df_batch.merge(\n",
-    "        ground_truth_df[['image_file', 'DOCUMENT_TYPE']],\n",
-    "        on='image_file',\n",
+    "        ground_truth_df[['image_stem', 'DOCUMENT_TYPE']],\n",
+    "        on='image_stem',\n",
     "        how='inner',\n",
     "        suffixes=('_pred', '_true')\n",
     "    )\n",
@@ -2355,10 +2376,17 @@
     "        incorrect_count = 0\n",
     "        not_found_count = 0\n",
     "\n",
-    "        # Merge on image_file to align predictions with ground truth\n",
+    "        # Normalize image names (strip extensions) for matching\n",
+    "        # Batch has extensions (.jpeg, .png), ground truth does not\n",
+    "        if 'image_stem' not in df_batch.columns:\n",
+    "            df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)\n",
+    "        if 'image_stem' not in ground_truth_df.columns:\n",
+    "            ground_truth_df['image_stem'] = ground_truth_df['image_file'].apply(lambda x: Path(x).stem)\n",
+    "\n",
+    "        # Merge on image_stem to align predictions with ground truth\n",
     "        merged = df_batch.merge(\n",
-    "            ground_truth_df[['image_file', field]],\n",
-    "            on='image_file',\n",
+    "            ground_truth_df[['image_stem', field]],\n",
+    "            on='image_stem',\n",
     "            how='inner',\n",
     "            suffixes=('_pred', '_true')\n",
     "        )\n",
@@ -2517,10 +2545,17 @@
     "        if field not in df_batch.columns or field not in ground_truth_df.columns:\n",
     "            continue\n",
     "\n",
-    "        # Merge on image_file to align predictions with ground truth\n",
+    "        # Normalize image names (strip extensions) for matching\n",
+    "        # Batch has extensions (.jpeg, .png), ground truth does not\n",
+    "        if 'image_stem' not in df_batch.columns:\n",
+    "            df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)\n",
+    "        if 'image_stem' not in ground_truth_df.columns:\n",
+    "            ground_truth_df['image_stem'] = ground_truth_df['image_file'].apply(lambda x: Path(x).stem)\n",
+    "\n",
+    "        # Merge on image_stem to align predictions with ground truth\n",
     "        merged = df_batch.merge(\n",
-    "            ground_truth_df[['image_file', field]],\n",
-    "            on='image_file',\n",
+    "            ground_truth_df[['image_stem', field]],\n",
+    "            on='image_stem',\n",
     "            how='inner',\n",
     "            suffixes=('_pred', '_true')\n",
     "        )\n",
