Add confusion matrix analysis and fix data matching issues in model_comparison.ipynb
- Integrated confusion matrix analysis for document classification.
- Added new features including document type confusion matrix, field-level confusion analysis, and per-field precision/recall/F1 metrics.
- Resolved three critical bugs:
  1. Fixed extension mismatch between batch CSV and ground truth.
  2. Corrected variable name mismatches for confusion analysis.
  3. Normalized column names in ground truth data for consistency.
- Updated notebook structure to include new analysis sections and documentation.
- Enhanced error handling for missing columns in ground truth data.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -2133,6 +2133,19 @@
     "    ground_truth = pd.read_csv(ground_truth_path, dtype=str)",
     "    rprint(f\"[green]\u2705 Ground truth loaded: {len(ground_truth)} rows[/green]\")",
     "",
+    "    # Normalize column name: ground truth uses 'image_name', we need 'image_file'",
+    "    if 'image_name' in ground_truth.columns and 'image_file' not in ground_truth.columns:",
+    "        ground_truth['image_file'] = ground_truth['image_name']",
+    "        rprint(f\"[dim]  Normalized: 'image_name' \u2192 'image_file'[/dim]\")",
+    "    elif 'image_file' not in ground_truth.columns:",
+    "        # Try other possible column names",
+    "        possible_names = ['filename', 'file', 'image']",
+    "        for col in possible_names:",
+    "            if col in ground_truth.columns:",
+    "                ground_truth['image_file'] = ground_truth[col]",
+    "                rprint(f\"[dim]  Normalized: '{col}' \u2192 'image_file'[/dim]\")",
+    "                break",
+    "",
     "# Prepare batch dataframes with consistent naming for confusion analysis",
     "# Use the loaded data from cell 5",
     "llama_batch_df = llama_df.copy() if not llama_df.empty else pd.DataFrame()",
@@ -2151,6 +2164,9 @@
     "",
     "if ground_truth.empty:",
     "    rprint(\"[yellow]\u26a0\ufe0f Warning: Ground truth not loaded. Confusion analysis will not work.[/yellow]\")",
+    "elif 'image_file' not in ground_truth.columns:",
+    "    rprint(\"[red]\u274c Error: Ground truth missing 'image_file' column[/red]\")",
+    "    rprint(f\"[yellow]   Available columns: {list(ground_truth.columns)}[/yellow]\")",
     "else:",
     "    rprint(f\"[cyan]Ground truth: {len(ground_truth)} rows[/cyan]\")",
     "",
