Refactor confusion matrix creation and classification report generation
- Improved the create_doctype_confusion_matrix function to handle document type predictions and ground truth more robustly.
- Added comments for clarity on the handling of document types and merging logic.
- Ensured that the confusion matrix and classification reports are generated correctly for both models (Llama and InternVL3).
- Updated visualization and reporting sections to maintain consistency and clarity in output.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -2191,196 +2191,209 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "def create_doctype_confusion_matrix(df_batch: pd.DataFrame, ground_truth_df: pd.DataFrame, model_name: str):\n",
-    "    \"\"\"\n",
-    "    Create document type confusion matrix using sklearn.\n",
-    "\n",
-    "    Args:\n",
-    "        df_batch: Batch results DataFrame with predicted document types\n",
-    "        ground_truth_df: Ground truth DataFrame with true document types\n",
-    "        model_name: Name of the model\n",
-    "\n",
-    "    Returns:\n",
-    "        tuple: (confusion_matrix, classification_report_dict)\n",
-    "    \"\"\"\n",
-    "    # Normalize image names (strip extensions) for matching\n",
-    "    # Batch has extensions (.jpeg, .png), ground truth does not\n",
-    "    df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)\n",
-    "    ground_truth_df['image_stem'] = ground_truth_df['image_file'].apply(lambda x: Path(x).stem)\n",
-    "\n",
-    "    # Merge to align predictions with ground truth using stems\n",
-    "    merged = df_batch.merge(\n",
-    "        ground_truth_df[['image_stem', 'DOCUMENT_TYPE']],\n",
-    "        on='image_stem',\n",
-    "        how='inner',\n",
-    "        suffixes=('_pred', '_true')\n",
-    "    )\n",
-    "\n",
-    "    # Get predicted and true document types\n",
-    "    if 'DOCUMENT_TYPE_pred' in merged.columns:\n",
-    "        y_pred = merged['DOCUMENT_TYPE_pred'].fillna('UNKNOWN').astype(str).str.strip().str.upper()\n",
-    "    else:\n",
-    "        y_pred = merged['document_type'].fillna('UNKNOWN').astype(str).str.strip().str.upper()\n",
-    "\n",
-    "    y_true = merged['DOCUMENT_TYPE_true'].fillna('UNKNOWN').astype(str).str.strip().str.upper()\n",
-    "\n",
-    "    # Get unique labels (document types)\n",
-    "    labels = sorted(list(set(y_true) | set(y_pred)))\n",
-    "\n",
-    "    # Compute confusion matrix\n",
-    "    cm = confusion_matrix(y_true, y_pred, labels=labels)\n",
-    "\n",
-    "    # Compute classification report\n",
-    "    report = classification_report(y_true, y_pred, labels=labels, output_dict=True, zero_division=0)\n",
-    "\n",
-    "    return cm, report, labels, y_true, y_pred\n",
-    "\n",
-    "# Create confusion matrices for both models\n",
-    "rprint(\"[bold cyan]Creating document type confusion matrices...[/bold cyan]\")\n",
-    "\n",
-    "llama_cm, llama_report, llama_labels, llama_y_true, llama_y_pred = create_doctype_confusion_matrix(\n",
-    "    llama_batch_df, ground_truth, 'Llama'\n",
-    ")\n",
-    "internvl_cm, internvl_report, internvl_labels, internvl_y_true, internvl_y_pred = create_doctype_confusion_matrix(\n",
-    "    internvl_batch_df, ground_truth, 'InternVL3'\n",
-    ")\n",
-    "\n",
-    "# Plot confusion matrices side by side\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 7))\n",
-    "\n",
-    "# Llama confusion matrix\n",
-    "sns.heatmap(\n",
-    "    llama_cm,\n",
-    "    annot=True,\n",
-    "    fmt='d',\n",
-    "    cmap='Blues',\n",
-    "    xticklabels=llama_labels,\n",
-    "    yticklabels=llama_labels,\n",
-    "    cbar_kws={'label': 'Count'},\n",
-    "    ax=ax1,\n",
-    "    linewidths=0.5,\n",
-    "    linecolor='gray'\n",
-    ")\n",
-    "ax1.set_title('Llama - Document Type Confusion Matrix', fontsize=14, fontweight='bold')\n",
-    "ax1.set_xlabel('Predicted Document Type', fontsize=12, fontweight='bold')\n",
-    "ax1.set_ylabel('True Document Type', fontsize=12, fontweight='bold')\n",
-    "ax1.tick_params(axis='x', rotation=45)\n",
-    "ax1.tick_params(axis='y', rotation=0)\n",
-    "\n",
-    "# InternVL3 confusion matrix\n",
-    "sns.heatmap(\n",
-    "    internvl_cm,\n",
-    "    annot=True,\n",
-    "    fmt='d',\n",
-    "    cmap='Blues',\n",
-    "    xticklabels=internvl_labels,\n",
-    "    yticklabels=internvl_labels,\n",
-    "    cbar_kws={'label': 'Count'},\n",
-    "    ax=ax2,\n",
-    "    linewidths=0.5,\n",
-    "    linecolor='gray'\n",
-    ")\n",
-    "ax2.set_title('InternVL3 - Document Type Confusion Matrix', fontsize=14, fontweight='bold')\n",
-    "ax2.set_xlabel('Predicted Document Type', fontsize=12, fontweight='bold')\n",
-    "ax2.set_ylabel('True Document Type', fontsize=12, fontweight='bold')\n",
-    "ax2.tick_params(axis='x', rotation=45)\n",
-    "ax2.tick_params(axis='y', rotation=0)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/doctype_confusion_matrix.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "rprint(\"[green]\u2705 Document type confusion matrices created[/green]\")\n",
-    "\n",
-    "# Display classification reports\n",
-    "rprint(\"\\n[bold blue]Llama - Document Type Classification Report:[/bold blue]\")\n",
-    "llama_report_df = pd.DataFrame(llama_report).transpose()\n",
-    "display(llama_report_df)\n",
-    "\n",
-    "rprint(\"\\n[bold blue]InternVL3 - Document Type Classification Report:[/bold blue]\")\n",
-    "internvl_report_df = pd.DataFrame(internvl_report).transpose()\n",
-    "display(internvl_report_df)\n",
-    "\n",
-    "# Save classification reports\n",
-    "llama_report_df.to_csv(CONFIG['output_dir'] + '/llama_doctype_classification_report.csv')\n",
-    "internvl_report_df.to_csv(CONFIG['output_dir'] + '/internvl_doctype_classification_report.csv')\n",
-    "\n",
-    "# Summary accuracy\n",
-    "llama_accuracy = (llama_y_true == llama_y_pred).sum() / len(llama_y_true) * 100\n",
-    "internvl_accuracy = (internvl_y_true == internvl_y_pred).sum() / len(internvl_y_true) * 100\n",
-    "\n",
-    "rprint(\"\\n[bold blue]Document Type Classification Accuracy:[/bold blue]\")\n",
-    "rprint(f\"[cyan]Llama: {llama_accuracy:.1f}%[/cyan]\")\n",
-    "rprint(f\"[cyan]InternVL3: {internvl_accuracy:.1f}%[/cyan]\")\n",
-    "\n",
-    "# Create comparison bar chart for per-class metrics\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(20, 6))\n",
-    "\n",
-    "# Extract per-class metrics (exclude macro/weighted avg)\n",
-    "def extract_class_metrics(report_dict):\n",
-    "    metrics = []\n",
-    "    for doc_type in ['INVOICE', 'RECEIPT', 'BANK_STATEMENT']:\n",
-    "        if doc_type.lower() in report_dict or doc_type in report_dict:\n",
-    "            key = doc_type.lower() if doc_type.lower() in report_dict else doc_type\n",
-    "            metrics.append({\n",
-    "                'Document Type': doc_type,\n",
-    "                'Precision': report_dict[key]['precision'],\n",
-    "                'Recall': report_dict[key]['recall'],\n",
-    "                'F1-Score': report_dict[key]['f1-score'],\n",
-    "                'Support': report_dict[key]['support']\n",
-    "            })\n",
-    "    return pd.DataFrame(metrics)\n",
-    "\n",
-    "llama_class_metrics = extract_class_metrics(llama_report)\n",
-    "internvl_class_metrics = extract_class_metrics(internvl_report)\n",
-    "\n",
-    "# Combine for comparison\n",
-    "llama_class_metrics['Model'] = 'Llama'\n",
-    "internvl_class_metrics['Model'] = 'InternVL3'\n",
-    "combined_metrics = pd.concat([llama_class_metrics, internvl_class_metrics])\n",
-    "\n",
-    "# Plot precision\n",
-    "ax1 = axes[0]\n",
-    "pivot_precision = combined_metrics.pivot(index='Document Type', columns='Model', values='Precision')\n",
-    "pivot_precision.plot(kind='bar', ax=ax1, color=['#3498db', '#e74c3c'], rot=45)\n",
-    "ax1.set_title('Precision by Document Type', fontsize=12, fontweight='bold')\n",
-    "ax1.set_ylabel('Precision', fontweight='bold')\n",
-    "ax1.set_ylim(0, 1.1)\n",
-    "ax1.legend(title='Model')\n",
-    "ax1.grid(axis='y', alpha=0.3)\n",
-    "\n",
-    "# Plot recall\n",
-    "ax2 = axes[1]\n",
-    "pivot_recall = combined_metrics.pivot(index='Document Type', columns='Model', values='Recall')\n",
-    "pivot_recall.plot(kind='bar', ax=ax2, color=['#3498db', '#e74c3c'], rot=45)\n",
-    "ax2.set_title('Recall by Document Type', fontsize=12, fontweight='bold')\n",
-    "ax2.set_ylabel('Recall', fontweight='bold')\n",
-    "ax2.set_ylim(0, 1.1)\n",
-    "ax2.legend(title='Model')\n",
-    "ax2.grid(axis='y', alpha=0.3)\n",
-    "\n",
-    "# Plot F1-score\n",
-    "ax3 = axes[2]\n",
-    "pivot_f1 = combined_metrics.pivot(index='Document Type', columns='Model', values='F1-Score')\n",
-    "pivot_f1.plot(kind='bar', ax=ax3, color=['#3498db', '#e74c3c'], rot=45)\n",
-    "ax3.set_title('F1-Score by Document Type', fontsize=12, fontweight='bold')\n",
-    "ax3.set_ylabel('F1-Score', fontweight='bold')\n",
-    "ax3.set_ylim(0, 1.1)\n",
-    "ax3.legend(title='Model')\n",
-    "ax3.grid(axis='y', alpha=0.3)\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/doctype_metrics_comparison.png', dpi=300, bbox_inches='tight')\n",
-    "plt.show()\n",
-    "\n",
-    "rprint(\"[green]\u2705 Document type metrics comparison visualizations created[/green]\")\n"
+    "",
+    "from sklearn.metrics import confusion_matrix, classification_report",
+    "import pandas as pd",
+    "import seaborn as sns",
+    "import matplotlib.pyplot as plt",
+    "import numpy as np",
+    "",
+    "def create_doctype_confusion_matrix(df_batch: pd.DataFrame, ground_truth_df: pd.DataFrame, model_name: str):",
+    "    \"\"\"",
+    "    Create document type confusion matrix using sklearn.",
+    "",
+    "    Args:",
+    "        df_batch: Batch results DataFrame with predicted document types",
+    "        ground_truth_df: Ground truth DataFrame with true document types",
+    "        model_name: Name of the model",
+    "",
+    "    Returns:",
+    "        tuple: (confusion_matrix, classification_report_dict)",
+    "    \"\"\"",
+    "    # Normalize image names (strip extensions) for matching",
+    "    # Batch has extensions (.jpeg, .png), ground truth does not",
+    "    df_batch['image_stem'] = df_batch['image_file'].apply(lambda x: Path(x).stem)",
+    "    ground_truth_df['image_stem'] = ground_truth_df['image_file'].apply(lambda x: Path(x).stem)",
+    "",
+    "    # Merge to align predictions with ground truth using stems",
+    "    merged = df_batch.merge(",
+    "        ground_truth_df[['image_stem', 'DOCUMENT_TYPE']],",
+    "        on='image_stem',",
+    "        how='inner',",
+    "        suffixes=('_pred', '_true')",
+    "    )",
+    "",
+    "    # Get predicted and true document types",
+    "    # CRITICAL: Use DOCUMENT_TYPE (extracted field) for predictions (6 types)",
+    "    #           Use DOCUMENT_TYPE from ground truth for true labels (3 types)",
+    "",
+    "    # After merge with suffixes ('_pred', '_true'):",
+    "    # - DOCUMENT_TYPE_pred = batch's extracted DOCUMENT_TYPE (6 types: includes rare types)",
+    "    # - DOCUMENT_TYPE_true = ground truth DOCUMENT_TYPE (3 types: INVOICE, RECEIPT, BANK_STATEMENT)",
+    "",
+    "    if 'DOCUMENT_TYPE_pred' in merged.columns:",
+    "        y_pred = merged['DOCUMENT_TYPE_pred'].fillna('UNKNOWN').astype(str).str.strip().str.upper()",
+    "    else:",
+    "        # Fallback: if no suffix, batch's DOCUMENT_TYPE is just 'DOCUMENT_TYPE'",
+    "        y_pred = merged['DOCUMENT_TYPE'].fillna('UNKNOWN').astype(str).str.strip().str.upper()",
+    "",
+    "    if 'DOCUMENT_TYPE_true' in merged.columns:",
+    "        y_true = merged['DOCUMENT_TYPE_true'].fillna('UNKNOWN').astype(str).str.strip().str.upper()",
+    "    else:",
+    "        # Fallback: shouldn't happen, but handle gracefully",
+    "        y_true = merged['DOCUMENT_TYPE'].fillna('UNKNOWN').astype(str).str.strip().str.upper()",
+    "",
+    "    # Get unique labels (document types)",
+    "    labels = sorted(list(set(y_true) | set(y_pred)))",
+    "",
+    "    # Compute confusion matrix",
+    "    cm = confusion_matrix(y_true, y_pred, labels=labels)",
+    "",
+    "    # Compute classification report",
+    "    report = classification_report(y_true, y_pred, labels=labels, output_dict=True, zero_division=0)",
+    "",
+    "    return cm, report, labels, y_true, y_pred",
+    "",
+    "# Create confusion matrices for both models",
+    "rprint(\"[bold cyan]Creating document type confusion matrices...[/bold cyan]\")",
+    "",
+    "llama_cm, llama_report, llama_labels, llama_y_true, llama_y_pred = create_doctype_confusion_matrix(",
+    "    llama_batch_df, ground_truth, 'Llama'",
+    ")",
+    "internvl_cm, internvl_report, internvl_labels, internvl_y_true, internvl_y_pred = create_doctype_confusion_matrix(",
+    "    internvl_batch_df, ground_truth, 'InternVL3'",
+    ")",
+    "",
+    "# Plot confusion matrices side by side",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 7))",
+    "",
+    "# Llama confusion matrix",
+    "sns.heatmap(",
+    "    llama_cm,",
+    "    annot=True,",
+    "    fmt='d',",
+    "    cmap='Blues',",
+    "    xticklabels=llama_labels,",
+    "    yticklabels=llama_labels,",
+    "    cbar_kws={'label': 'Count'},",
+    "    ax=ax1,",
+    "    linewidths=0.5,",
+    "    linecolor='gray'",
+    ")",
+    "ax1.set_title('Llama - Document Type Confusion Matrix', fontsize=14, fontweight='bold')",
+    "ax1.set_xlabel('Predicted Document Type', fontsize=12, fontweight='bold')",
+    "ax1.set_ylabel('True Document Type', fontsize=12, fontweight='bold')",
+    "ax1.tick_params(axis='x', rotation=45)",
+    "ax1.tick_params(axis='y', rotation=0)",
+    "",
+    "# InternVL3 confusion matrix",
+    "sns.heatmap(",
+    "    internvl_cm,",
+    "    annot=True,",
+    "    fmt='d',",
+    "    cmap='Blues',",
+    "    xticklabels=internvl_labels,",
+    "    yticklabels=internvl_labels,",
+    "    cbar_kws={'label': 'Count'},",
+    "    ax=ax2,",
+    "    linewidths=0.5,",
+    "    linecolor='gray'",
+    ")",
+    "ax2.set_title('InternVL3 - Document Type Confusion Matrix', fontsize=14, fontweight='bold')",
+    "ax2.set_xlabel('Predicted Document Type', fontsize=12, fontweight='bold')",
+    "ax2.set_ylabel('True Document Type', fontsize=12, fontweight='bold')",
+    "ax2.tick_params(axis='x', rotation=45)",
+    "ax2.tick_params(axis='y', rotation=0)",
+    "",
+    "plt.tight_layout()",
+    "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/doctype_confusion_matrix.png', dpi=300, bbox_inches='tight')",
+    "plt.show()",
+    "",
+    "rprint(\"[green]\u2705 Document type confusion matrices created[/green]\")",
+    "",
+    "# Display classification reports",
+    "rprint(\"\\n[bold blue]Llama - Document Type Classification Report:[/bold blue]\")",
+    "llama_report_df = pd.DataFrame(llama_report).transpose()",
+    "display(llama_report_df)",
+    "",
+    "rprint(\"\\n[bold blue]InternVL3 - Document Type Classification Report:[/bold blue]\")",
+    "internvl_report_df = pd.DataFrame(internvl_report).transpose()",
+    "display(internvl_report_df)",
+    "",
+    "# Save classification reports",
+    "llama_report_df.to_csv(CONFIG['output_dir'] + '/llama_doctype_classification_report.csv')",
+    "internvl_report_df.to_csv(CONFIG['output_dir'] + '/internvl_doctype_classification_report.csv')",
+    "",
+    "# Summary accuracy",
+    "llama_accuracy = (llama_y_true == llama_y_pred).sum() / len(llama_y_true) * 100",
+    "internvl_accuracy = (internvl_y_true == internvl_y_pred).sum() / len(internvl_y_true) * 100",
+    "",
+    "rprint(\"\\n[bold blue]Document Type Classification Accuracy:[/bold blue]\")",
+    "rprint(f\"[cyan]Llama: {llama_accuracy:.1f}%[/cyan]\")",
+    "rprint(f\"[cyan]InternVL3: {internvl_accuracy:.1f}%[/cyan]\")",
+    "",
+    "# Create comparison bar chart for per-class metrics",
+    "fig, axes = plt.subplots(1, 3, figsize=(20, 6))",
+    "",
+    "# Extract per-class metrics (exclude macro/weighted avg)",
+    "def extract_class_metrics(report_dict):",
+    "    metrics = []",
+    "    for doc_type in ['INVOICE', 'RECEIPT', 'BANK_STATEMENT']:",
+    "        if doc_type.lower() in report_dict or doc_type in report_dict:",
+    "            key = doc_type.lower() if doc_type.lower() in report_dict else doc_type",
+    "            metrics.append({",
+    "                'Document Type': doc_type,",
+    "                'Precision': report_dict[key]['precision'],",
+    "                'Recall': report_dict[key]['recall'],",
+    "                'F1-Score': report_dict[key]['f1-score'],",
+    "                'Support': report_dict[key]['support']",
+    "            })",
+    "    return pd.DataFrame(metrics)",
+    "",
+    "llama_class_metrics = extract_class_metrics(llama_report)",
+    "internvl_class_metrics = extract_class_metrics(internvl_report)",
+    "",
+    "# Combine for comparison",
+    "llama_class_metrics['Model'] = 'Llama'",
+    "internvl_class_metrics['Model'] = 'InternVL3'",
+    "combined_metrics = pd.concat([llama_class_metrics, internvl_class_metrics])",
+    "",
+    "# Plot precision",
+    "ax1 = axes[0]",
+    "pivot_precision = combined_metrics.pivot(index='Document Type', columns='Model', values='Precision')",
+    "pivot_precision.plot(kind='bar', ax=ax1, color=['#3498db', '#e74c3c'], rot=45)",
+    "ax1.set_title('Precision by Document Type', fontsize=12, fontweight='bold')",
+    "ax1.set_ylabel('Precision', fontweight='bold')",
+    "ax1.set_ylim(0, 1.1)",
+    "ax1.legend(title='Model')",
+    "ax1.grid(axis='y', alpha=0.3)",
+    "",
+    "# Plot recall",
+    "ax2 = axes[1]",
+    "pivot_recall = combined_metrics.pivot(index='Document Type', columns='Model', values='Recall')",
+    "pivot_recall.plot(kind='bar', ax=ax2, color=['#3498db', '#e74c3c'], rot=45)",
+    "ax2.set_title('Recall by Document Type', fontsize=12, fontweight='bold')",
+    "ax2.set_ylabel('Recall', fontweight='bold')",
+    "ax2.set_ylim(0, 1.1)",
+    "ax2.legend(title='Model')",
+    "ax2.grid(axis='y', alpha=0.3)",
+    "",
+    "# Plot F1-score",
+    "ax3 = axes[2]",
+    "pivot_f1 = combined_metrics.pivot(index='Document Type', columns='Model', values='F1-Score')",
+    "pivot_f1.plot(kind='bar', ax=ax3, color=['#3498db', '#e74c3c'], rot=45)",
+    "ax3.set_title('F1-Score by Document Type', fontsize=12, fontweight='bold')",
+    "ax3.set_ylabel('F1-Score', fontweight='bold')",
+    "ax3.set_ylim(0, 1.1)",
+    "ax3.legend(title='Model')",
+    "ax3.grid(axis='y', alpha=0.3)",
+    "",
+    "plt.tight_layout()",
+    "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/doctype_metrics_comparison.png', dpi=300, bbox_inches='tight')",
+    "plt.show()",
+    "",
+    "rprint(\"[green]\u2705 Document type metrics comparison visualizations created[/green]\")",
+    ""
    ]
   },
   {
